<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/button1" android:text="@string/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
    <Button
        android:id="@+id/button2" android:text="@string/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button1"
        android:layout_toEndOf="@id/button1"/>
    <Button
        android:id="@+id/button3" android:text="@string/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/button1"
        android:layout_toStartOf="@id/button1"/>
    <Button
        android:id="@+id/button4" android:text="@string/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:layout_alignStart="@id/button3"
        android:layout_alignEnd="@id/button1"/>
    <Button
        android:id="@+id/button5" android:text="@string/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button1"
        android:layout_alignTop="@id/button1"
        android:layout_alignBottom="@id/button4"/>

</RelativeLayout>
