<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView android:id="@+id/Saisie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saisie_repas"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText android:id="@+id/entree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entree"
        app:layout_constraintTop_toBottomOf="@id/Saisie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <EditText android:id="@+id/plat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/plat"
        app:layout_constraintTop_toBottomOf="@id/entree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />

    <CheckBox android:id="@+id/fromage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fromage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <CheckBox android:id="@+id/fruit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fruit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fromage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fruit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <RadioButton
            android:id="@+id/midi"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/midi"/>

        <RadioButton
            android:id="@+id/soir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soir"/>
    </RadioGroup>

    <Button android:id="@+id/valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.20"/>

    <Button android:id="@+id/Annuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annuler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.75"/>


</androidx.constraintlayout.widget.ConstraintLayout>
